kubernetes/environments/prod/cluster-autoscaler-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-autoscaler
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: cluster-autoscaler
          image: registry.k8s.io/autoscaling/cluster-autoscaler:v1.29.2
          command:
            - ./cluster-autoscaler
            - --v=1
            - --stderrthreshold=warning
            - --cloud-provider=aws
            - --skip-nodes-with-local-storage=false
            - --expander=least-waste
            - --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/ecommerce-prod
            - --balance-similar-node-groups
            - --scale-down-enabled=true
            - --scale-down-delay-after-add=20m
            - --scale-down-unneeded-time=20m
            - --max-node-provision-time=15m
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
